--- a/103Test.ioc
+++ b/103Test.ioc
@@ -14,17 +14,19 @@ Mcu.Name=STM32F103Z(C-D-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin11=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin10=PB5
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin2=PE4
 Mcu.Pin3=PE5
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=PA13
-Mcu.Pin7=PA14
-Mcu.Pin8=PB5
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=12
+Mcu.Pin4=OSC_IN
+Mcu.Pin5=OSC_OUT
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103ZETx
@@ -44,6 +46,10 @@ NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+OSC_IN.Mode=HSE-External-Oscillator
+OSC_IN.Signal=RCC_OSC_IN
+OSC_OUT.Mode=HSE-External-Oscillator
+OSC_OUT.Signal=RCC_OSC_OUT
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
@@ -104,6 +110,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM6_Init-TIM6-false-HAL-true,5-MX_TIM7_Init-TIM7-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.ADCFreqValue=4000000
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
 RCC.APB1TimFreq_Value=8000000
@@ -113,18 +120,20 @@ RCC.FCLKCortexFreq_Value=8000000
 RCC.FSMCFreq_Value=8000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=8000000
-RCC.I2S2Freq_Value=8000000
-RCC.I2S3Freq_Value=8000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FSMCFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SDIOFreq_Value,SDIOHCLKDiv2FreqValue,SYSCLKFreq_VALUE,TimSysFreq_Value,USBFreq_Value
-RCC.MCOFreq_Value=8000000
-RCC.PLLCLKFreq_Value=12000000
-RCC.PLLMCOFreq_Value=6000000
-RCC.PLLMUL=RCC_PLL_MUL3
+RCC.I2S2Freq_Value=16000000
+RCC.I2S3Freq_Value=16000000
+RCC.IPParameters=ADCFreqValue,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FSMCFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLSourceVirtual,SDIOFreq_Value,SDIOHCLKDiv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=16000000
+RCC.PLLCLKFreq_Value=16000000
+RCC.PLLMCOFreq_Value=8000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.SDIOFreq_Value=8000000
 RCC.SDIOHCLKDiv2FreqValue=4000000
-RCC.SYSCLKFreq_VALUE=8000000
+RCC.SYSCLKFreq_VALUE=16000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=8000000
-RCC.USBFreq_Value=12000000
+RCC.USBFreq_Value=16000000
+RCC.VCOOutput2Freq_Value=8000000
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=199
 TIM6.Prescaler=79
