--- a/103Test.ioc
+++ b/103Test.ioc
@@ -6,10 +6,11 @@ Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM6
-Mcu.IP4=TIM7
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP3=TIM3
+Mcu.IP4=TIM6
+Mcu.IP5=TIM7
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F103Z(C-D-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -42,6 +43,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -58,10 +60,8 @@ PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=led0
 PB5.Locked=true
-PB5.Signal=GPIO_Output
+PB5.Signal=S_TIM3_CH2
 PE2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE2.GPIO_Label=KEY2
 PE2.GPIO_PuPd=GPIO_PULLUP
@@ -108,7 +108,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM6_Init-TIM6-false-HAL-true,5-MX_TIM7_Init-TIM7-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM6_Init-TIM6-false-HAL-true,5-MX_TIM7_Init-TIM7-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=4000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=8000000
@@ -135,6 +135,13 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=8000000
 RCC.USBFreq_Value=16000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation2 CH2,OCPolarity_2
+TIM3.OCPolarity_2=TIM_OCPOLARITY_LOW
+TIM3.Period=7
+TIM3.Prescaler=499
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=199
 TIM6.Prescaler=79
