--- a/103Test.ioc
+++ b/103Test.ioc
@@ -7,27 +7,30 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM3
-Mcu.IP4=TIM6
-Mcu.IP5=TIM7
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP4=TIM5
+Mcu.IP5=TIM6
+Mcu.IP6=TIM7
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F103Z(C-D-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PB5
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin13=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin10=PA14
+Mcu.Pin11=PB5
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin2=PE4
 Mcu.Pin3=PE5
 Mcu.Pin4=OSC_IN
 Mcu.Pin5=OSC_OUT
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=14
+Mcu.Pin6=PA0-WKUP
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA13
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103ZETx
@@ -44,6 +47,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM5_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -52,6 +56,9 @@ OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
 OSC_OUT.Mode=HSE-External-Oscillator
 OSC_OUT.Signal=RCC_OSC_OUT
+PA0-WKUP.GPIOParameters=GPIO_PuPd
+PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
+PA0-WKUP.Signal=S_TIM5_CH1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
@@ -108,7 +115,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM6_Init-TIM6-false-HAL-true,5-MX_TIM7_Init-TIM7-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM6_Init-TIM6-false-HAL-true,5-MX_TIM7_Init-TIM7-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.ADCFreqValue=4000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=8000000
@@ -137,11 +144,18 @@ RCC.USBFreq_Value=16000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM5_CH1.0=TIM5_CH1,Input_Capture1_from_TI1
+SH.S_TIM5_CH1.ConfNb=1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation2 CH2,OCPolarity_2
 TIM3.OCPolarity_2=TIM_OCPOLARITY_LOW
 TIM3.Period=71
 TIM3.Prescaler=499
+TIM5.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM5.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,Channel-Input_Capture1_from_TI1
+TIM5.Period=0xffff
+TIM5.Prescaler=7
+TIM5.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=199
 TIM6.Prescaler=79
@@ -152,6 +166,8 @@ USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
